Refactored a good bit of the ML to almost work